--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "prisma": "^5.7.1",
