--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "password-hash": "^1.2.2",
     "prisma": "^5.7.1",
     "supertest": "^6.3.3"
   }
