Cleans up the connections with prisma adding a utils folder that has the most common db queries in so i can re-use the code making it dryer

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "listen": "node listen"
+    "listen": "node listen",
+    "seed": "node ./prisma/seed.js"
   },
   "author": "",
   "license": "ISC",
