--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "password-hash": "^1.2.2",
+    "path": "^0.12.7",
     "prisma": "^5.7.1",
     "supertest": "^6.3.3"
   }
